force-app/main/default/objects/Case/fields/isSunday__c.field-meta.xml
<CustomField>
    <fullName>isSunday__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isSunday</label>
    <type>Checkbox</type>
</CustomField>