force-app/main/default/objects/Case/fields/isTuesday__c.field-meta.xml
<CustomField>
    <fullName>isTuesday__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isTuesday</label>
    <type>Checkbox</type>
</CustomField>