force-app/main/default/objects/Case/fields/Time_to_Resolve__c.field-meta.xml
<CustomField>
    <fullName>Time_to_Resolve__c</fullName>
    <label>Time to Resolve</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>