force-app/main/default/objects/Case/validationRules/ValidateCase.validationRule-meta.xml
<ValidationRule>
    <fullName>ValidateCase</fullName>
    <active>false</active>
    <errorConditionFormula>ISPICKVAL(Priority, &apos;High&apos;) &amp;&amp; ISBLANK(Description)</errorConditionFormula>
    <errorMessage>You can fill empty</errorMessage>
</ValidationRule>