force-app/main/default/objects/Case/listViews/Opportunity_Queue_Case.listView-meta.xml
<ListView>
    <fullName>Opportunity_Queue_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Opportunity Queue</label>
    <queue>Opportunity_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>